# Mess-benchmark

./: .gitignore  LICENSE  LICENSE.txt  README.md
CPU/: README.md
CPU/Actual-hardware/: README.md
CPU/Actual-hardware/ARM/: README.md
CPU/Actual-hardware/ARM/A64FX/: README.md  config.sh  create_runner_config.sh  runner.sh  submit_arraygen.sh  submit_bw.job.bash  submit_main.job.bash
CPU/Actual-hardware/ARM/Graviton3/: README.md  generateFigure.sh  runner.sh  submit_main.job.bash
CPU/Actual-hardware/Power/: README.md
CPU/Actual-hardware/Power/Power9/: README.md  create_runner_config.sh  generateFigure.sh.sh  submit_main.job.bash
CPU/Actual-hardware/RISC-V/: README.md
CPU/Actual-hardware/x86/: README.md
CPU/Actual-hardware/x86/AMD-Zen2/: README.md  create_runner_config.sh  generateFigure.sh  runner.sh  submit_main.job
CPU/Actual-hardware/x86/Intel-SapphireRapids-Xeon-Gold-6448Y-CXL/: README.md  config.sh  create_runner_config.sh  generate_curves.sh  runner.sh  submit_main.job
CPU/Actual-hardware/x86/Intel-SapphireRapids-Xeon-Platinum-8480/: README.md  config.sh  runner.sh
CPU/Actual-hardware/x86/Intel-SapphireRapids-Xeon-Platinum-8480-ُTutorial-MICRO-2025/: README.md  config.sh  config.toml  create_runner_config.sh  generateFig.sh  runner.sh  submit_main.job
CPU/Actual-hardware/x86/Intel-Skylake-Xeon-Platinum-8160/: README.md  generateFigure.sh  runner.sh  (+1 more)
CPU/Simulators/: README.md
CPU/Simulators/Trace-driven/Ramulator2/ramulator2/: CMakeLists.txt  build.sh  parse-ramulator.py  res.yaml
CPU/Simulators/Trace-driven/Ramulator2/ramulator2/src/base/: config.cpp  config.h
CPU/Simulators/Trace-driven/Ramulator2/ramulator2/src/dram/: node.h  spec.h
CPU/Simulators/Trace-driven/Ramulator2/ramulator2/src/dram/impl/: DDR4.cpp  DDR5.cpp  LPDDR5.cpp
CPU/Simulators/Trace-driven/Ramulator2/ramulator2/src/dram/lambdas/: action.h  power.h  preq.h  rowhit.h  rowopen.h
CPU/Simulators/Trace-driven/Ramulator2/ramulator2/src/frontend/impl/processor/simpleO3/: core.cpp  simpleO3.cpp
GPU/: README.md
GPU/NVIDIA/H100/: config.sh  create_runner_config.sh  generateFigure.sh  runner.sh
(+115300 files in other folders)
